# singboxer

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TROUBLESHOOTING.md  cache.db  install.sh  subscriptions.conf.example
src/: latency.rs  lib.rs  main.rs
src/config/: mod.rs
src/models/: mod.rs
src/parser/: mod.rs
src/singbox/: mod.rs
src/tui/: mod.rs
