[package]
name = "singboxer"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing sing-box configurations"
authors = ["singboxer"]

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "socks"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Base64 decoding
base64 = "0.22"

# Futures
futures = "0.3"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Directory paths
dirs = "5.0"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Process management
sysinfo = "0.33"

# Binary location
which = "7.0"
